fix import bugs
